@@ -22,13 +22,11 @@ package io.wcm.devops.conga.generator.util;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import java.util.List;
 import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 import io.wcm.devops.conga.generator.spi.context.PluginContextOptions;
 import io.wcm.devops.conga.generator.spi.context.ValueProviderGlobalContext;
@@ -54,28 +52,28 @@ class VariableStringResolverExpressionTest {
 
   @Test
   void testSimple() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "v2");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "v2");
 
     assertEquals("The v1 and v2", underTest.resolve("The ${ var1 + ' and ' + var2 }", variables));
   }
 
   @Test
   void testSingleVariableWithObject() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableList.of("v1", "v2"));
+    Map<String, Object> variables = Map.of("var1", List.of("v1", "v2"));
 
-    assertEquals(ImmutableList.of("v1", "v2"), underTest.resolve("${ var1 }", variables));
+    assertEquals(List.of("v1", "v2"), underTest.resolve("${ var1 }", variables));
   }
 
   @Test
   void testNestedVariables() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "${var1 + var1}", "var3", "${var2 + var1}");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "${var1 + var1}", "var3", "${var2 + var1}");
 
     assertEquals("v1,v1v1,v1v1v1", underTest.resolve("${var1},${var2},${var3}", variables));
   }
 
   @Test
   void testNestedVariables_IllegalRecursion() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "${ var2 }", "var2", "${ var1 }");
+    Map<String, Object> variables = Map.of("var1", "${ var2 }", "var2", "${ var1 }");
 
     assertThrows(IllegalArgumentException.class, () -> {
       underTest.resolve("${var1}", variables);
@@ -84,7 +82,7 @@ class VariableStringResolverExpressionTest {
 
   @Test
   void testUnknownVariable() {
-    Map<String, Object> variables = ImmutableMap.of();
+    Map<String, Object> variables = Map.of();
 
     assertThrows(IllegalArgumentException.class, () -> {
       underTest.resolve("${var1}", variables);
@@ -93,7 +91,7 @@ class VariableStringResolverExpressionTest {
 
   @Test
   void testEscapedVariables() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "\\${ var1 }${ var1 }", "var3", "${ var2 }${ var1 }");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "\\${ var1 }${ var1 }", "var3", "${ var2 }${ var1 }");
 
     assertEquals("${ var1 },${ var1 }v1,${ var1 }v1v1", underTest.resolve("\\${ var1 },${ var2 },${ var3 }", variables));
     assertEquals("\\${ var1 },\\${ var1 }v1,\\${ var1 }v1v1", underTest.resolve("\\${ var1 },${ var2 },${ var3 }", variables, false));
@@ -102,28 +100,28 @@ class VariableStringResolverExpressionTest {
 
   @Test
   void testDeepMapVariable() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableMap.of("k1", "v1", "k2", ImmutableMap.of("k21", "v21", "k22", "v22")));
+    Map<String, Object> variables = Map.of("var1", Map.of("k1", "v1", "k2", Map.of("k21", "v21", "k22", "v22")));
 
     assertEquals("The v1 and v21", underTest.resolve("The ${var1.k1 + ' and ' + var1.k2.k21}", variables));
   }
 
   @Test
   void testListVariable() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableList.of("v1", "v2", ImmutableList.of("v31", "v32")));
+    Map<String, Object> variables = Map.of("var1", List.of("v1", "v2", List.of("v31", "v32")));
 
     assertEquals("The v1,v2,v31,v32", underTest.resolve("The ${ var1 }", variables));
   }
 
   @Test
   void testListVariable_StringJoin() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableList.of("v1", "v2", "v3"));
+    Map<String, Object> variables = Map.of("var1", List.of("v1", "v2", "v3"));
 
     assertEquals("The v1 v2 v3", underTest.resolve("The ${new('java.lang.String').join(' ',var1)}", variables));
   }
 
   @Test
   void testMapVariable() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableMap.of("k1", "v1", "k2", ImmutableMap.of("k21", "v21", "k22", "v22")));
+    Map<String, Object> variables = Map.of("var1", Map.of("k1", "v1", "k2", Map.of("k21", "v21", "k22", "v22")));
 
     assertEquals("The k1=v1,k2=k21=v21,k22=v22", underTest.resolve("The ${ var1 }", variables));
   }
