@@ -24,10 +24,10 @@ import static io.wcm.devops.conga.model.util.MapExpander.getDeep;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
-import org.junit.jupiter.api.Test;
+import java.util.List;
+import java.util.Map;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import org.junit.jupiter.api.Test;
 
 class MapExpanderTest {
 
@@ -38,73 +38,73 @@ class MapExpanderTest {
 
   @Test
   void testEmpty() {
-    assertEquals(ImmutableMap.of(), expand(ImmutableMap.of()));
+    assertEquals(Map.of(), expand(Map.of()));
   }
 
   @Test
   void testSimple() {
-    assertEquals(ImmutableMap.of("key1", "value1"),
-        expand(ImmutableMap.of("key1", "value1")));
+    assertEquals(Map.of("key1", "value1"),
+        expand(Map.of("key1", "value1")));
 
-    assertEquals(ImmutableMap.of("key1", "value1", "key2", 5),
-        expand(ImmutableMap.of("key1", "value1", "key2", 5)));
+    assertEquals(Map.of("key1", "value1", "key2", 5),
+        expand(Map.of("key1", "value1", "key2", 5)));
   }
 
   @Test
   void testSimpleNested() {
-    assertEquals(ImmutableMap.of("key1", "value1", "key2", ImmutableMap.of("key21", "value21")),
-        expand(ImmutableMap.of("key1", "value1", "key2", ImmutableMap.of("key21", "value21"))));
+    assertEquals(Map.of("key1", "value1", "key2", Map.of("key21", "value21")),
+        expand(Map.of("key1", "value1", "key2", Map.of("key21", "value21"))));
   }
 
   @Test
   void testOneLevel_1() {
-    assertEquals(ImmutableMap.of("key1", "value1", "key2", ImmutableMap.of("key21", "value21")),
-        expand(ImmutableMap.of("key1", "value1", "key2.key21", "value21")));
+    assertEquals(Map.of("key1", "value1", "key2", Map.of("key21", "value21")),
+        expand(Map.of("key1", "value1", "key2.key21", "value21")));
   }
 
   @Test
   void testOneLevel_2() {
-    assertEquals(ImmutableMap.of("key1", "value1", "key2", ImmutableMap.of("key21", "value21", "key22", 55)),
-        expand(ImmutableMap.of("key1", "value1", "key2.key21", "value21", "key2.key22", 55)));
+    assertEquals(Map.of("key1", "value1", "key2", Map.of("key21", "value21", "key22", 55)),
+        expand(Map.of("key1", "value1", "key2.key21", "value21", "key2.key22", 55)));
   }
 
   @Test
   void testThreeLevels() {
-    assertEquals(ImmutableMap.of("key1", "value1", "a", ImmutableMap.of("b", ImmutableMap.of(
-        "c", ImmutableMap.of("1", "v1", "2", 99),
-        "d", ImmutableMap.of("1", true)))),
-        expand(ImmutableMap.of("key1", "value1", "a.b.c.1", "v1", "a.b.c.2", 99, "a.b.d.1", true)));
+    assertEquals(Map.of("key1", "value1", "a", Map.of("b", Map.of(
+        "c", Map.of("1", "v1", "2", 99),
+        "d", Map.of("1", true)))),
+        expand(Map.of("key1", "value1", "a.b.c.1", "v1", "a.b.c.2", 99, "a.b.d.1", true)));
   }
 
   @Test
   void testMapDeeperLevel() {
-    assertEquals(ImmutableMap.of("key1", ImmutableMap.of("a", ImmutableMap.of("b", ImmutableMap.of("c", "v1")))),
-        expand(ImmutableMap.of("key1", ImmutableMap.of("a.b.c", "v1"))));
+    assertEquals(Map.of("key1", Map.of("a", Map.of("b", Map.of("c", "v1")))),
+        expand(Map.of("key1", Map.of("a.b.c", "v1"))));
   }
 
   @Test
   void testWithList() {
-    assertEquals(ImmutableMap.of("key1", ImmutableList.of(
-        ImmutableMap.of("a", ImmutableMap.of("b", "v1", "c", ImmutableMap.of("d", "v2"))),
-        ImmutableMap.of("a", ImmutableMap.of("b", "v3"))
+    assertEquals(Map.of("key1", List.of(
+        Map.of("a", Map.of("b", "v1", "c", Map.of("d", "v2"))),
+        Map.of("a", Map.of("b", "v3"))
         )),
-        expand(ImmutableMap.of("key1", ImmutableList.of(
-            ImmutableMap.of("a.b", "v1", "a.c.d", "v2"),
-            ImmutableMap.of("a.b", "v3")
+        expand(Map.of("key1", List.of(
+            Map.of("a.b", "v1", "a.c.d", "v2"),
+            Map.of("a.b", "v3")
             ))));
   }
 
   @Test
   void testGetDeep() {
-    assertNull(getDeep(ImmutableMap.of(), null));
-    assertNull(getDeep(ImmutableMap.of(), "p1"));
-    assertNull(getDeep(ImmutableMap.of(), "p1.p2"));
-    assertNull(getDeep(ImmutableMap.of(), "p1.p2.p3"));
+    assertNull(getDeep(Map.of(), ""));
+    assertNull(getDeep(Map.of(), "p1"));
+    assertNull(getDeep(Map.of(), "p1.p2"));
+    assertNull(getDeep(Map.of(), "p1.p2.p3"));
 
-    assertEquals("v1", getDeep(ImmutableMap.of("p1", "v1", "p2", "v2"), "p1"));
-    assertNull(getDeep(ImmutableMap.of("p1", "v1", "p2", "v2"), "p1.p2"));
-    assertEquals("v1", getDeep(ImmutableMap.of("p1", ImmutableMap.of("p2", "v1"), "p2", "v2"), "p1.p2"));
-    assertEquals("v1", getDeep(ImmutableMap.of("p1", ImmutableMap.of("p2", ImmutableMap.of("p3", "v1")), "p2", "v2"), "p1.p2.p3"));
+    assertEquals("v1", getDeep(Map.of("p1", "v1", "p2", "v2"), "p1"));
+    assertNull(getDeep(Map.of("p1", "v1", "p2", "v2"), "p1.p2"));
+    assertEquals("v1", getDeep(Map.of("p1", Map.of("p2", "v1"), "p2", "v2"), "p1.p2"));
+    assertEquals("v1", getDeep(Map.of("p1", Map.of("p2", Map.of("p3", "v1")), "p2", "v2"), "p1.p2.p3"));
   }
 
 }
